--- a/public/css/nowplaying.css
+++ b/public/css/nowplaying.css
@@ -62,6 +62,7 @@
 
 .overlayListLabel {
     font-weight: bold;
+    font-size: 2em;
 }
 
 .sliderGroup {
@@ -72,14 +73,16 @@
     align-items: center;
     vertical-align: middle;
     text-align: center;
+    width: 95%;
 }
 
 .sliderValue {
-    width: 25%;
+    width: 15%;
+    font-size: 1.5em;
 }
 
 .sliderInput {
-    width: 75%;
+    width: 85%;
 }
 
 @media screen and (orientation:portrait) {
@@ -284,13 +287,13 @@ input[type=range]::-webkit-slider-runnable-track {
 input[type=range]::-webkit-slider-thumb {
     box-shadow: 0px 0px 0px #232629;
     border: 1px solid #232629;
-    height: 18px;
-    width: 18px;
+    height: 50px;
+    width: 50px;
     border-radius: 25px;
     background: #eff0f1;
     cursor: pointer;
     -webkit-appearance: none;
-    margin-top: -7px;
+    margin-top: -24px;
 }
 input[type=range]:focus::-webkit-slider-runnable-track {
     background: #3daee9;
@@ -308,8 +311,8 @@ input[type=range]::-moz-range-track {
 input[type=range]::-moz-range-thumb {
     box-shadow: 0px 0px 0px #232629;
     border: 1px solid #232629;
-    height: 18px;
-    width: 18px;
+    height: 50px;
+    width: 50px;
     border-radius: 25px;
     background: #eff0f1;
     cursor: pointer;
@@ -339,8 +342,8 @@ input[type=range]::-ms-thumb {
     margin-top: 1px;
     box-shadow: 0px 0px 0px #232629;
     border: 1px solid #232629;
-    height: 18px;
-    width: 18px;
+    height: 50px;
+    width: 50px;
     border-radius: 25px;
     background: #eff0f1;
     cursor: pointer;
