--- a/public/css/site.css
+++ b/public/css/site.css
@@ -21,13 +21,14 @@ svg {
 }
 
 .buttonOverlay {
-    width: 96px;
-    height: 48px;
+    width: 210px;
+    height: 100px;
     font-weight: bold;
+    font-size: 30px;
     border: none;
     border-radius: 10px;
     filter: drop-shadow(5px 5px 5px black);
-    margin: 24px;
+    margin: 54px;
     background-color: #eff0f1;
     color: #232629;
 }
@@ -77,13 +78,13 @@ svg {
     transform: translate(-50%, -50%);
     background-color: #232629;
     color: #eff0f1;
-    width: auto;
+    width: 80%;
     height: auto;
     min-width: 50%;
     max-height: 95%;
     max-width: 95%;
     border-radius: 10px;
-    padding: 5px;
+    padding: 20px;
     filter: drop-shadow(10px 10px 10px black);
     z-index:300;
 }
