--- a/public/css/library.css
+++ b/public/css/library.css
@@ -33,15 +33,17 @@
 }
 
 .itemListItem {
-    background-color: #4d4d4d;
-    fill-opacity: 1;
-    color: #eff0f1;
-    height: 48px;
-    width: 100%;
-    filter: drop-shadow(5px 5px 5px black);
-    margin-bottom: 10px;
-    font-weight: bold;
-    text-align: left;
+  background-color: #4d4d4d;
+  fill-opacity: 1;
+  color: #eff0f1;
+  /* height: 48px; */
+  width: 100%;
+  filter: drop-shadow(5px 5px 5px black);
+  margin-bottom: 10px;
+  padding: 20px;
+  font-weight: bold;
+  text-align: left;
+  font-size: 30px;
 }
 
 .itemListButton svg {
@@ -58,7 +60,7 @@
     top: 0;
     left: 0;
     right: 0;
-    height: 40px;
+    height: 74px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -69,10 +71,10 @@
 
 #content {
     position: absolute;
-    top: 48px;
-    left: 0;
-    right: 0;
-    bottom: 48px;
+    top: 74px;
+    left: 20px;
+    right: 20px;
+    bottom: 74px;
 }
 
 #footer {
