--- a/public/css/library.css
+++ b/public/css/library.css
@@ -113,9 +113,10 @@
 #content {
     position: absolute;
     top: 74px;
-    left: 20px;
-    right: 20px;
+    left: 0px;
+    right: 0px;
     bottom: 74px;
+    overflow: auto;
 }
 #listContainer {
     display: flex;
