change scrollbar style

--- a/public/css/library.css
+++ b/public/css/library.css
@@ -147,3 +147,23 @@
     bottom: 2px;
     height: 40px;
 }
+
+#content::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: #232629;
+}
+
+#content::-webkit-scrollbar
+{
+    width: 8px;
+    background-color: #232629;
+}
+
+#content::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #F5F5F5;
+}
