--- a/public/css/library.css
+++ b/public/css/library.css
@@ -168,3 +168,7 @@
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #F5F5F5;
 }
+
+#buttonZoneName {
+    font-size: 24px;
+}
