font size up for album info

--- a/public/css/library.css
+++ b/public/css/library.css
@@ -172,3 +172,11 @@
 #buttonZoneName {
     font-size: 24px;
 }
+
+#listTitle {
+    font-size: 40px;
+}
+
+#listSubtitle {
+    font-size: 25px;
+}
