--- a/public/css/site.css
+++ b/public/css/site.css
@@ -62,6 +62,11 @@ svg {
     text-align:center;
 }
 
+.spinner {
+    display: none;
+    margin: 0 auto;
+}
+
 .overlay {
     display:none;
 }
@@ -74,6 +79,9 @@ svg {
     bottom: 0px;
     background-color: rgba(0,0,0,0.25);
     z-index:200;
+    display: flex;
+    align-items: center;
+    height: 100%;
 }
 
 .overlayContent {
