--- a/public/css/keyboard.css
+++ b/public/css/keyboard.css
@@ -4,8 +4,8 @@
   text-align: center;
   padding: .1em;
   position: absolute;
-  left: 3em;
-  top: 8em;
+  left: 1em;
+  top: 7em;
   z-index: 16000;
   /* see issue #484 */
   -ms-touch-action: manipulation;
@@ -21,8 +21,8 @@
 }
 
 .ui-keyboard-button {
-  height: 5em;
-  min-width: 3.5em;
+  height: 4em;
+  min-width: 3.7em;
   margin: .3em;
   cursor: pointer;
   overflow: hidden;
@@ -74,7 +74,7 @@
   margin: 0 0 3px 0;
   display: inline;
   width: 99%;
-  padding-left: 0px;
+  padding-left: 0.6em;
 }
 
 .ui-keyboard-keyset {
